--- a/plugins/woocommerce-blocks/assets/js/blocks/cart-checkout/mini-cart-contents/editor.scss
+++ b/plugins/woocommerce-blocks/assets/js/blocks/cart-checkout/mini-cart-contents/editor.scss
@@ -21,6 +21,13 @@
 			flex-direction: column;
 			height: 100%;
 		}
+
+		// Temporary fix after the appender button was positioned absolute
+		// See https://github.com/woocommerce/woocommerce-gutenberg-products-block/issues/5742#issuecomment-1032804168
+		.block-list-appender {
+			position: relative;
+		}
+
 	}
 
 	.wp-block-woocommerce-mini-cart-products-table-block {
@@ -51,6 +58,12 @@
 			overflow-y: auto;
 			box-sizing: border-box;
 			padding: $gap-largest $gap $gap;
+		}
+
+		// Temporary fix after the appender button was positioned absolute
+		// See https://github.com/woocommerce/woocommerce-gutenberg-products-block/issues/5742#issuecomment-1032804168
+		.block-list-appender {
+			position: relative;
 		}
 	}
 }
